--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android"
+
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.40.5"
     kapt "com.google.dagger:hilt-android-compiler:2.40.5"
@@ -88,6 +90,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "io.coil-kt:coil-compose:2.2.2"
+
 
 
 }
