--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
         </activity>
         <activity android:name=".presentation.SecondActivity" />
         <activity android:name=".presentation.ThirdActivity" />
+        <service android:name=".presentation.PushNotificationService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
     <queries>
